# app/controller/restaurant.controller.js
@@ -35,7 +35,7 @@ class RestaurantController extends Controller {
         this.router.post('/create', (req, res) => {
             try {
                 this.restaurantManager.createRestaurant(req.body, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
@@ -44,7 +44,7 @@ class RestaurantController extends Controller {
         this.router.post('/update', (req, res) => {
             try {
                 this.restaurantManager.updateRestaurant(req.body, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
@@ -53,7 +53,7 @@ class RestaurantController extends Controller {
         this.router.post('/upsert', (req, res) => {
             try {
                 this.restaurantManager.upsertRestaurant(req.body, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
@@ -62,7 +62,7 @@ class RestaurantController extends Controller {
         this.router.post('/delete', (req, res) => {
             try {
                 this.restaurantManager.deleteRestaurant(req.body, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
@@ -71,16 +71,16 @@ class RestaurantController extends Controller {
         this.router.get('/getOwnersByRestaurant/:restaurantId/owner/:ownerId', (req, res) => {
             try {
                 this.restaurantManager.getRestaurantOwnersByRestaurant(req.params.restaurantId, req.params.ownerId, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
             }
         });
-        this.router.get('/getOwnedRestaurantsByOwner/:restaurantId/owner/:ownerId', (req, res) => {
+        this.router.get('/getOwnedRestaurantsByOwner/:ownerId', (req, res) => {
             try {
-                this.restaurantManager.getOwnedRestaurantsByOwner(req.params.restaurantId, req.params.ownerId, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                this.restaurantManager.getOwnedRestaurantsByOwner(req.params.ownerId, (reqErr, reqRes) => {
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
@@ -89,7 +89,7 @@ class RestaurantController extends Controller {
         this.router.get('/addOwner/:restaurantId/owner/:ownerId', (req, res) => {
             try {
                 this.restaurantManager.addRestaurantOwner(req.params.restaurantId, req.params.ownerId, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
@@ -98,7 +98,7 @@ class RestaurantController extends Controller {
         this.router.get('/removeOwner/:restaurantId/owner/:ownerId', (req, res) => {
             try {
                 this.restaurantManager.removeRestaurantOwner(req.params.restaurantId, req.params.ownerId, (reqErr, reqRes) => {
-                    this.errorHandler.genericResponse(reqErr, reqRes, req, res, next);
+                    this.errorHandler.genericResponse(reqErr, reqRes, req, res);
                 });
             } catch(error) {
                 this.errorHandler.catchAllError(error, req, res);
