# app/swagger.json
@@ -81,7 +81,7 @@
         "tags":[
           "Restaurant"
         ],
-        "summary": "Get Restaurant by ID",
+        "summary": "Get ALL Restaurant",
         "description": "Retrieve All Restaurants",
         "responses": {
           "200": {
@@ -108,6 +108,36 @@
             "name": "restaurantId",
             "in": "path",
             "description": "ID of Restaurant to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Connection",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Restaurant"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/restaurant/getOwnedRestaurantsByOwner/{ownerId}": {
+      "get": {
+        "tags":[
+          "Restaurant"
+        ],
+        "summary": "Get Restaurant by Owner ID",
+        "description": "Retrieve Restaurant User/Owner Object ID.",
+        "parameters": [
+          {
+            "name": "ownerId",
+            "in": "path",
+            "description": "ID of User/Owner to return",
             "required": true,
             "type": "integer",
             "format": "int64"
